practice/docker-registry/newchart/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: docker-registry
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: docker-registry.local
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
